gke/pingpong/manifests/pg.statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-service

spec:
  ports:
    - port: 5432
      name: db
  clusterIP: None
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database

spec:
  replicas: 1
  serviceName: pg-service
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgresdb
          image: postgres:16-alpine3.20
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "105Mi"
              cpu: "60m"
            limits:
              memory: "150Mi"
              cpu: "150m"

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
